[package]
name = "UniTerm"
version = "0.1.0"
description = "serial terminal"
authors = ["Phil Spindler"]
license = ""
repository = ""
default-run = "UniTerm"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
ansi-parser = "0.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["devtools", "dialog-all"] }
tokio-serial = "5.4.3"
tokio = { version = "1.12.0", features = ["macros", "time", "sync"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
